# AI_solo_coder_task_B_100

./: Dockerfile.backend  Dockerfile.frontend  Dockerfile.simulator  README.md  docker-compose.yml
backend/: CMakeLists.txt
backend/config/: ahp_weights.json  materials.json  system.json  vehicles.json
backend/include/: ahp_evaluator.h  clickhouse_client.h  common.h  fenyun_application.h  fenyun_http_server.h  fenyun_server.h  mqtt_alert_manager.h  structural_simulation.h
backend/include/alarm_mqtt/: alarm_mqtt.h
backend/include/common/: data_types.h  json.h  lockfree_queue.h  logger_init.h  metrics_collector.h
backend/include/config/: config_loader.h
backend/include/dtu_receiver/: dtu_receiver.h
backend/include/era_comparator/: era_comparator.h
backend/include/formation_optimizer/: formation_optimizer.h
backend/include/impact_simulator/: impact_simulator.h
backend/include/protection_optimizer/: protection_optimizer.h
backend/include/storage/: clickhouse_client.h
backend/include/user_session/: user_session_manager.h
backend/include/vehicle_comparator/: vehicle_comparator.h
backend/include/vr_assault/: vr_assault_engine.h
backend/src/: ahp_evaluator.cpp  clickhouse_client.cpp  fenyun_application.cpp  fenyun_http_server.cpp  fenyun_server.cpp  main.cpp  mqtt_alert_manager.cpp  structural_simulation.cpp
backend/src/alarm_mqtt/: alarm_mqtt.cpp
backend/src/common/: logger_init.cpp  metrics_collector.cpp
backend/src/config/: config_loader.cpp
backend/src/dtu_receiver/: dtu_receiver.cpp
backend/src/era_comparator/: era_comparator.cpp
backend/src/formation_optimizer/: formation_optimizer.cpp
backend/src/impact_simulator/: impact_simulator.cpp
backend/src/protection_optimizer/: protection_optimizer.cpp
backend/src/storage/: clickhouse_client.cpp
backend/src/user_session/: user_session_manager.cpp
backend/src/vehicle_comparator/: vehicle_comparator.cpp
backend/src/vr_assault/: vr_assault_engine.cpp
backend/tests/: CMakeLists.txt  config_loader_test.cpp  defect_fix_verification_test.cpp  era_comparator_test.cpp  formation_optimizer_test.cpp  impact_simulator_test.cpp  integration_test.cpp  test_helpers.h  test_main.cpp  user_session_manager_test.cpp  vehicle_comparator_test.cpp  vr_assault_test.cpp
database/: init_clickhouse.sql
deploy/grafana/provisioning/datasources/: datasources.yml
deploy/mosquitto/: mosquitto.conf  passwd
deploy/nginx/: default.conf  nginx.conf
deploy/prometheus/: prometheus.yml
frontend/: app.js  assault_cart_3d.js  era_comparison_view.js  formation_optimizer_view.js  index.html  protection_panel.js  vehicle_comparison_view.js  virtual_driving_view.js
simulator/: sensor_simulator.py
